<resources>
    <string name="app_name">feed_the_cat</string>
    <string name="satiety">Satiety</string>
    <string name="value_of_satiety">0</string>
    <string name="button_feed_text">Feed</string>
    <string name="title">Feed the cat</string>
    <string name="further_button">Далее</string>
    <string name="name_input">Enter your name:</string>
    <string name="registration_button">GO!</string>
    <string name="start_new">New Game</string>
    <string name="start_results">Top Players</string>
    <string name="start_help">Help</string>
    <string name="start_about_author">About Author</string>
    <string name="main_result">Your Result:</string>
    <string name="main_result_value">0</string>
    <string name="input_name_default">Name</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="button_home_text">Home</string>
    <string name="cat_name">cat</string>
    <string name="continue_btn">Continue</string>
    <string name="about_author">Laboratory work №1 Poida Alexandrina, group 951007</string>
    <string name="table_header">Top 5 players</string>
    <string name="table_raw_name">Name</string>
    <string name="table_raw_high_score">Score</string>

    <string name="get_started">Get Started</string>
    <string name="next">Next</string>
    <string name="feed_slider">Feed pet</string>
    <string name="high_scores_slider">High Scores</string>
    <string name="friends_slider">Friends</string>
    <string name="love_slider"><![CDATA[<3]]></string>
    <string name="feed_slider_text">Feed your lovely pet by pressing FEED button</string>
    <string name="high_scores_slider_text">Bit your own high scores</string>
    <string name="friends_slider_text">Invite your friends and compete with each other</string>
    <string name="love_slider_text">Have a nice game!</string>


</resources>