<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity"
    android:id="@+id/root_element">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="36dp"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/name_input"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/editName"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/registration_button"
        android:layout_width="88dp"
        android:layout_height="78dp"
        android:layout_marginBottom="300dp"
        android:background="@drawable/btn_tap_animation"
        android:fontFamily="@font/montserrat_alternates"
        android:text="@string/registration_button"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/editName"
        android:layout_width="228dp"
        android:layout_height="48dp"
        android:layout_marginBottom="32dp"
        android:ems="10"
        android:fontFamily="@font/montserrat_alternates"
        android:hint="@string/input_name_default"
        android:inputType="textPersonName"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/registration_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>